<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/textSmsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_sms"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textSmsExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_explainer"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnRequestSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/btn_enable_sms"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textSmsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_status_off"
        android:layout_marginTop="12dp" />
</LinearLayout>
